--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receita de Bolo de Cenoura</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Site de Receita</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+    
+
 <body>
     <header>
         <h1>Receita de Bolo de Cenoura</h1>
@@ -17,11 +20,16 @@
                 <li><a href="#dicas">Dicas</a></li>
             </ul>
         </nav>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pacifico&display=swap" rel="stylesheet">
     </header>
 
     <section id="inicio">
         <h2>Sobre a Receita</h2>
-        <p>O bolo de cenoura é uma das receitas mais amadas e fáceis de fazer. Aqui, você vai aprender como preparar um bolo de cenoura fofinho, com a cobertura de chocolate que todo mundo adora.</p>
+        <img src="bolo de cenoura.jfif" alt="Bolo de Cenoura">
+        <p>O bolo de cenoura é uma das receitas mais amadas e fáceis de fazer. Aqui, você vai aprender como preparar um
+            bolo de cenoura fofinho, com a cobertura de chocolate que todo mundo adora.</p>
     </section>
 
     <section id="ingredientes">
@@ -44,14 +52,16 @@
             <li>Em um liquidificador, bata as cenouras, ovos e óleo até ficar homogêneo.</li>
             <li>Adicione o açúcar e a farinha, e bata novamente até que tudo esteja bem misturado.</li>
             <li>Adicione o fermento e misture delicadamente com uma espátula.</li>
-            <li>Despeje a massa na forma e asse por 40 minutos ou até que o bolo esteja dourado e um palito saia limpo.</li>
+            <li>Despeje a massa na forma e asse por 40 minutos ou até que o bolo esteja dourado e um palito saia limpo.
+            </li>
         </ol>
     </section>
 
     <section id="dicas">
         <h2>Dicas</h2>
         <ul>
-            <li>Para uma cobertura de chocolate deliciosa, derreta 200g de chocolate meio amargo e misture com 1/2 caixinha de creme de leite.</li>
+            <li>Para uma cobertura de chocolate deliciosa, derreta 200g de chocolate meio amargo e misture com 1/2
+                caixinha de creme de leite.</li>
             <li>Se quiser deixar o bolo mais fofinho, peneire a farinha antes de adicionar à mistura.</li>
             <li>Use cenouras frescas para garantir que o bolo fique bem saboroso.</li>
         </ul>
@@ -63,22 +73,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
