--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="inicio">
         <h2>Sobre a Receita</h2>
-        <img src="bolo de cenoura.jfif" alt="Bolo de Cenoura">
+        <img src="bolo.jpg" alt="Bolo de Cenoura">
         <p>O bolo de cenoura é uma das receitas mais amadas e fáceis de fazer. Aqui, você vai aprender como preparar um
             bolo de cenoura fofinho, com a cobertura de chocolate que todo mundo adora.</p>
     </section>
